#
# File: CMakeLists.txt
#
# Date: Sat Oct 20 18:50:00 EST 2018
# Author: carlos.chacon
#

CMAKE_MINIMUM_REQUIRED (VERSION 3.2.0)

PROJECT (programming-exercises CXX C)

IF (CMAKE_VERSION VERSION_GREATER 3.2.0)
  CMAKE_POLICY (SET CMP0057 NEW)
ENDIF ()

# Set additional module paths
LIST (APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)

# Set common variables
SET (BUILD_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}")

IF ("${CMAKE_BUILD_TYPE}" STREQUAL "Debug")
  SET (BUILD_BINARIES_DIRECTORY "${BUILD_DIRECTORY}/debug")
ELSE ()
  SET (BUILD_BINARIES_DIRECTORY "${BUILD_DIRECTORY}/release")
ENDIF ()

SET (BUILD_OBJECT_FILES_DIRECTORY   "${BUILD_BINARIES_DIRECTORY}/obj")
SET (CMAKE_RUNTIME_OUTPUT_DIRECTORY "${BUILD_BINARIES_DIRECTORY}/bin")
SET (CMAKE_LIBRARY_OUTPUT_DIRECTORY "${BUILD_BINARIES_DIRECTORY}/bin")
SET (CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${BUILD_BINARIES_DIRECTORY}/bin")
SET (PROJECT_DATA_DIR                "share")
SET (PROJECT_BUILD_DATA_DIR          "${BUILD_DIRECTORY}/${PROJECT_DATA_DIR}")

# Print variables to stdout
MESSAGE ( STATUS )
MESSAGE ( STATUS "################################################################" )
MESSAGE ( STATUS "CMAKE_INSTALL_PREFIX = ${CMAKE_INSTALL_PREFIX}" )
MESSAGE ( STATUS "CMAKE_BUILD_TYPE     = ${CMAKE_BUILD_TYPE}" )
MESSAGE ( STATUS "BUILD DIRECTORY      = ${BUILD_DIRECTORY}" )
MESSAGE ( STATUS )
MESSAGE ( STATUS "change a configuration variable with: cmake -D<Variable>=<Value>" )
MESSAGE ( STATUS "################################################################" )
MESSAGE ( STATUS )

# Add common compiler flags
IF (CMAKE_COMPILER_IS_GNUCXX OR "${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
  SET (CMAKE_C_FLAGS_RELEASE          "-O3")
  SET (CMAKE_CXX_FLAGS_RELEASE        "-O3")
  SET (CMAKE_C_FLAGS_RELWITHDEBINFO   "-g -O0")
  SET (CMAKE_CXX_FLAGS_RELWITHDEBINFO "-g -O0")
  SET (CMAKE_C_FLAGS_DEBUG            "-g -O0 --coverage")
  SET (CMAKE_CXX_FLAGS_DEBUG          "-g -O0 --coverage")
ENDIF ()

# Add projects
ADD_SUBDIRECTORY (exercises "${BUILD_OBJECT_FILES_DIRECTORY}/exercises")
