#
# File: CMakeLists.txt
#
# Date: Mon Apr 06, 2018
# Author: Carlos Chacon <chacon.carlosj@gmail.com>
#

SET (OUTPUT_NAME algorithms-example)

# Print variables to stdout
MESSAGE ( STATUS )
MESSAGE ( STATUS "Configuring ${OUTPUT_NAME}:" )
MESSAGE ( STATUS "Build type: ${CMAKE_BUILD_TYPE}" )
MESSAGE ( STATUS )

INCLUDE (CTest)
ENABLE_TESTING ()

# Source code files
FILE (GLOB_RECURSE SOURCE_FILES src/*.cpp include/*.h include/*.inl)
FILE (GLOB_RECURSE TEST_SRC_FILES tests/*.cpp tests/*.h tests/*.inl)

# Add common compiler flags.
IF (CMAKE_COMPILER_IS_GNUCXX)
  ADD_DEFINITIONS("-std=c++11")
  SET (CMAKE_C_FLAGS_RELEASE          "-std=c++11 -s -O3")
  SET (CMAKE_CXX_FLAGS_RELEASE        "-std=c++11 -s -O3")
  SET (CMAKE_C_FLAGS_RELWITHDEBINFO   "-std=c++11 -g -O0")
  SET (CMAKE_CXX_FLAGS_RELWITHDEBINFO "-std=c++11 -g -O0")
  SET (CMAKE_C_FLAGS_DEBUG            "-std=c++11 -g -O0")
  SET (CMAKE_CXX_FLAGS_DEBUG          "-std=c++11 -g -O0")
ENDIF ()

# Build tests
SET (PROJECT_TEST_NAME test-${OUTPUT_NAME})

FIND_PACKAGE (GTest)
FIND_PACKAGE (GoogleMocks)

IF ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
  SET (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-c99-extensions")
ENDIF ()

ADD_EXECUTABLE (${PROJECT_TEST_NAME} ${TEST_SRC_FILES} ${SOURCE_FILES})

TARGET_INCLUDE_DIRECTORIES (${PROJECT_TEST_NAME} SYSTEM PRIVATE ${GTEST_INCLUDE_DIR})
TARGET_INCLUDE_DIRECTORIES (${PROJECT_TEST_NAME} SYSTEM PRIVATE ${GOOGLE_MOCKS_INCLUDE_DIRS})
TARGET_INCLUDE_DIRECTORIES (${PROJECT_TEST_NAME} PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/include")
TARGET_INCLUDE_DIRECTORIES (${PROJECT_TEST_NAME} PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/src")

#MESSAGE (STATUS ${CMAKE_CURRENT_SOURCE_DIR})

TARGET_LINK_LIBRARIES (${PROJECT_TEST_NAME}
  PRIVATE ${GTEST_MAIN_LIBRARY}
  PRIVATE ${GTEST_LIBRARY}
  PRIVATE ${GOOGLE_MOCKS_LIBRARIES})

MESSAGE (STATUS ${GTEST_MAIN_LIBRARY})
MESSAGE (STATUS ${GTEST_LIBRARY})

GTEST_ADD_TESTS ("${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${PROJECT_TEST_NAME}" "" ${TEST_SRC_FILES})
